New changes to angular app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <div class="layout">
     <div class="column-1">
       <app-product-gallery></app-product-gallery>
+      <app-product-features></app-product-features>
     </div>
     <div class="column-2">
       <app-product-overview></app-product-overview>
