--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,13 +19,13 @@
         <div class="final-price">
             <div class="text">
                 <div class="price">
-                    $295.95
+                    {{ finalPrice }}
                 </div>
                 <div class="subtext">
                     Need financing? Learn more
                 </div>
             </div>
-            <button class="primary-button">Buy now</button>
+            <button class="primary-button" tabindex="0">Buy now</button>
         </div>
     </div>
 </footer>
