--- a/src/styles.sass
+++ b/src/styles.sass
@@ -36,6 +36,9 @@ html
         *
             box-sizing: border-box
 
+            &:focus, &:hover
+                outline: none
+
         h1
             font-size: 40px
             line-height: 48px
