--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -14,10 +14,32 @@
     .column-1
         display: inline-block
         width: 100%
+        padding-bottom: 50px
 
     .column-2
         display: inline-block
         width: 100%
+
+.content
+    .column-1
+        ::ng-deep .product-features
+            display: none
+    .column-2
+        ::ng-deep .product-features
+            display: flex
+            flex-flow: column
+
+            .column
+                margin-bottom: 40px
+
+@media screen and (min-width: map.get($breakpoints, "phone"))
+    .content
+        .column-1
+            ::ng-deep .product-features
+                display: flex
+        .column-2
+            ::ng-deep .product-features
+                display: none
 
 @media screen and (min-width: map.get($breakpoints, "tablet"))
     .content
