--- a/src/app/product-overview/product-overview.component.sass
+++ b/src/app/product-overview/product-overview.component.sass
@@ -96,3 +96,21 @@
         .added-price
             @include small-text
             text-align: right
+
+.product-spec
+    .row
+        display: flex
+        padding: 18px 0 18px
+        border-bottom: 1px solid $color-border
+
+        h4
+            @include h4
+            margin: 0
+
+        .label
+            flex-grow: 1
+
+        .desc
+            flex-grow: 1
+            align-self: flex-end
+            text-align: right
